--- a/CargadosTrucking/CargadosTrucking.iOS/CargadosTrucking.iOS.csproj
+++ b/CargadosTrucking/CargadosTrucking.iOS/CargadosTrucking.iOS.csproj
@@ -145,6 +145,9 @@
     <PackageReference Include="Xamarin.Forms.Visual.Material">
       <Version>5.0.0.2012</Version>
     </PackageReference>
+    <PackageReference Include="XF.Material">
+      <Version>1.7.8</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
