--- a/CargadosTrucking/CargadosTrucking.Android/Properties/AndroidManifest.xml
+++ b/CargadosTrucking/CargadosTrucking.Android/Properties/AndroidManifest.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:requestLegacyExternalStorage="true" android:versionCode="1" android:usesCleartextTraffic="true" android:versionName="1.0" package="com.companyname.cargadostrucking" android:installLocation="auto">
-	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="29" />
-	<application android:label="CargadosTrucking.Android" android:usesCleartextTraffic="true"></application>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:requestLegacyExternalStorage="true" android:versionCode="1" android:usesCleartextTraffic="true" android:versionName="1.0" package="com.datarial.JIB" android:installLocation="auto">
+	<uses-sdk android:minSdkVersion="19" android:targetSdkVersion="29" />
+	<application android:label="JIB.Android" android:usesCleartextTraffic="true"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
