--- a/CargadosTrucking/CargadosTrucking/CargadosTrucking.csproj
+++ b/CargadosTrucking/CargadosTrucking/CargadosTrucking.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Forms.Visual.Material" Version="5.0.0.2012" />
+    <PackageReference Include="XF.Material" Version="1.7.8" />
   </ItemGroup>
 
   <ItemGroup>
