--- a/CargadosTrucking/CargadosTrucking/CargadosTrucking.csproj
+++ b/CargadosTrucking/CargadosTrucking/CargadosTrucking.csproj
@@ -43,6 +43,9 @@
     <EmbeddedResource Update="Confirmacion.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Editarfotografia.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="StyleResources.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
