--- a/CargadosTrucking/CargadosTrucking.Android/CargadosTrucking.Android.csproj
+++ b/CargadosTrucking/CargadosTrucking.Android/CargadosTrucking.Android.csproj
@@ -159,5 +159,14 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\LogoJIB.jpeg" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\crop.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\rotateright.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\camerachange.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
