--- a/CargadosTrucking/CargadosTrucking/CargadosTrucking.csproj
+++ b/CargadosTrucking/CargadosTrucking/CargadosTrucking.csproj
@@ -46,6 +46,9 @@
     <EmbeddedResource Update="Editarfotografia.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Login.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="StyleResources.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
